apps/demo-website/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-website
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: demo-website
        resources:
          limits:
            cpu: "600m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
